tests/samples/negative/functions/lambda_reference_capture.ax
module lambda_reference_capture;

fn main() -> i32 {
    let base: i32 = 1;
    let set_base = [&mut base](value: i32) -> i32 {
        base = value;
        return base;
    };
    return set_base(2);
}
